--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             margin-bottom: .8rem;
             padding: 1rem;
             color: rgb(143, 33, 33);
+            text-align: center;
 
         }
 
@@ -48,9 +49,15 @@
 <body>
     <div class="wrapper">
         <button id="aahilBtn">A</button>
-        <div class="content aahil show">AAHIL</div>
+        <div class="content aahil show">
+           <h2>AAHIL</h2> 
+           <p>Hello! I am Aahil. I am 6 years old and I go to Scoil Ghrainne</p>
+        </div>
         <button id="eanaBtn">E</button>
-        <div class="content eana show">EANA</div>
+        <div class="content eana show">
+            <h2>AAHIL</h2> 
+           <p>Hello! I am Eana. I am 4 years old and I go to Scoil Ghrainne</p>
+        </div>
 
     </div>
     <script>
