--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            transition: all 0.4s ease-in-out;
             
         }
 
@@ -55,7 +56,7 @@
         </div>
         <button id="eanaBtn">E</button>
         <div class="content eana show">
-            <h2>AAHIL</h2> 
+            <h2>EANA</h2> 
            <p>Hello! I am Eana. I am 4 years old and I go to Scoil Ghrainne</p>
         </div>
 
