--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         .content {
-            display: flex;
+            /* display: flex; */
             min-width: 100px;
             background-color: aqua;
             border-radius: 10px;
